Added concurrent examples